[tool.poetry]
name = "cnc"
version = "0.1.0"
description = "connect to remote servers, but wake em up first"
authors = ["Shane Segal <shane@smsegal.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.scripts]
cnc = "cnc.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
