[tool.poetry]
name = "cnc"
version = "0.1.0"
description = "connect to remote servers, but wake em up first"
authors = ["Shane Segal <shane@smsegal.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12.0"
rich = "^13.3.5"
pydantic = "^1.10.8"
pyyaml = "^6.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.13.2"
ipykernel = "^6.23.1"
typing-extensions = "^4.6.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
hypothesis = "^6.75.7"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
hypothesis = "^6.75.7"

[tool.poetry.scripts]
cnc = "cnc.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92

[tool.black]
line-length = 88

[tool.pyright]
venvPath = "."
venv = ".venv"
