[tool.poetry]
name = "cnc"
version = "0.2.1"
description = "connect to remote servers, but wake em up first"
authors = ["Shane Segal <shane@smsegal.ca>"]
readme = "README.md"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12.0"
rich = "^13.3.5"
pydantic = "^2.0.2"
pyyaml = "^6.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.13.2"
ipykernel = "^6.23.1"
typing-extensions = "^4.6.3"
pyright = "^1.1.313"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
hypothesis = "^6.80.0"


[tool.poetry.group.release.dependencies]
dunamai = "^1.17.0"

[tool.poetry.scripts]
cnc = "cnc.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 92

[tool.black]
line-length = 88

[tool.pyright]
venvPath = "."
venv = ".venv"
